Revision history for Perl module Dist-Zilla-Plugin-LocalInstall

{{$NEXT}}
    * Initial version