@@ -32,3 +32,4 @@ changelog = CHANGES
 [Git::Tag]
 
 [@TestingMania]
+[LocalInstall]
