@@ -6,6 +6,7 @@ package Dist::Zilla::Plugin::LocalInstall;
 
 use Carp ();
 use Moose;
+with 'Dist::Zilla::Role::Plugin';
 with 'Dist::Zilla::Role::AfterRelease';
 
 =head1 DESCRIPTION
@@ -14,40 +15,57 @@ After doing C<dzil release>, this plugin will install your dist so you
 are always the first person to have the latest and greatest version. It's
 like getting first post, only useful.
 
+To use it, add the following in F<dist.ini>:
+
+    [LocalInstall]
+
+You can specify an alternate install command:
+
+    [LocalInstall]
+    install_command = cpanm .
+
+=cut
+
+has install_command => (
+    is      => 'ro',
+    isa     => 'Str',
+);
+
 =head1 METHODS
 
 =head2 after_release
 
 This gets called after the release is completed - it installs the built dist
-using L<CPAN>.
+using L<CPAN> (unless you specified something different).
 
 =cut
 
 sub after_release {
     my $self = shift;
-    my $built_in = $self->zilla->built_in;
 
     eval {
         require File::pushd;
+        my $built_in = $self->zilla->built_in;
         ## no critic Punctuation
         my $wd = File::pushd::pushd($built_in);
-        my @cmd = ($^X => '-MCPAN' =>
-                $^O eq 'MSWin32' ? q{-e"install '.'"} : '-einstall "."');
+        my @cmd = $self->{install_command}
+                    ? split(/ /, $self->{install_command})
+                    : ($^X => '-MCPAN' =>
+                            $^O eq 'MSWin32' ? q{-e"install '.'"} : q{-einstall "."});
 
         $self->log_debug([ 'installing via %s', \@cmd ]);
-        system(@cmd) && $self->log_fatal([ "error running %s", \@cmd ]);
+        system(@cmd) && $self->log_fatal([ 'Error running %s', \@cmd ]);
     };
 
     if ($@) {
         $self->log($@);
-        $self->log("install failed");
+        $self->log('Install failed');
     }
     else {
-        $self->log("install OK");
+        $self->log('Installed OK');
     }
     return;
 }
-
 no Moose;
 
 1;
