@@ -2,3 +2,4 @@ Revision history for Perl module Dist-Zilla-Plugin-LocalInstall
 
 {{$NEXT}}
     * Initial version
+    * Added support for specifying the install command
